--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav>
 			<ul id="sidebar">
 				<li>
-					<a href="/">Home</a>
+					<a href="#">Home</a>
 				</li>
 				<li>
 					<a href="about.html">About me</a>
