--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,13 @@
 	<main>
 		<h2>My portfolio</h2>
 		<div class="portfolio-container">
-			<div class="item item--1"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--2"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--3"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--4"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--5"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--6"><img src="image/pc.jpg" alt="" srcset=""></div>
-			<div class="item item--4"><img src="image/pc.jpg" alt="" srcset=""></div>
+			<div class="item item--1"><img src="image/bookcard.png" alt="" srcset=""></div>
+			<div class="item item--2"><img src="image/diet.png" alt="" srcset=""></div>
+			<div class="item item--3"><img src="image/programingerror.png" alt="" srcset=""></div>
+			<div class="item item--4"><img src="image/daiku.png" alt="" srcset=""></div>
+			<div class="item item--5"><img src="image/waterserver.png" alt="" srcset=""></div>
+			<div class="item item--6"><img src="image/wheather.png" alt="" srcset=""></div>
+			<div class="item item--4"><img src="image/Iris.png" alt="" srcset=""></div>
 			<div class="item item--5"><img src="image/pc.jpg" alt="" srcset=""></div>
 			<div class="item item--6"><img src="image/pc.jpg" alt="" srcset=""></div>
 		</div>
