portfoliopage textsize change

--- a/about.html
+++ b/about.html
@@ -43,8 +43,11 @@
 			<p>36歳のフリーランス。<br>
 				建築の専門学校を卒業後、大工として15年間活動。<br>
 				建築業と並行して、WEBサイトの運営、アフィリエイト、輸入ビジネスなどを経験。<br>
+				アフィリエイトでは最高発生報酬80万円以上を達成。月間最大39,000PV。多くのキーワードで上位表示されています。
+				最大で月300件以上の商品を販売。
 				WEBサイト作成のスキル、デザイン、ライティング、マーケティングなども学ぶ。<br>
-				現在は、フリーランスとしてWEBサイト運営を行う。
+				プログラミングが趣味で初心者向け某プログラミングサイトのランキングで上位に入っている。他、udemyでは50以上のコースを受講。<br>
+				現在は、福岡でフリーランスとしてWEBサイト運営を行う。
 			</p>
 			<h3>スキル</h3>
 			<hr>
@@ -62,28 +65,28 @@
 					<h4>デザイン</h4>
 					<ul>
 						<li>Photo shop</li>
+						<li>Illustrator</li>
 						<li>XD</li>
 					</ul>
 				</div>
 				<div class="col-2">
 					<h4>フレームワーク</h4>
 					<ul>
-						<li>HMTL.CSS</li>
-						<li>Javascript</li>
-						<li>Python</li>
-						<li>Ruby</li>
-						<li>PHP</li>
+						<li>Ruby on Rails</li>
+						<li>Django</li>
 					</ul>
 					<h4>その他</h4>
 					<ul>
-						<li>HMTL.CSS</li>
-						<li>Javascript</li>
-						<li>Python</li>
-						<li>Ruby</li>
-						<li>PHP</li>
+						<li>SEO</li>
+						<li>WEBマーケティング</li>
+						<li>動画制作の経験などもあり</li>
 					</ul>
 				</div>
 			</div>
+			<h3>趣味・興味</h3>
+			<p>プログラミングのために始めた英語の勉強が趣味。日頃から見ている動画、聞いている音楽は英語圏のものが中心。ただし、中々上達しない。
+				サッカー観戦が趣味で国内、海外の試合を常にチェックしている。福岡県民だがサガン鳥栖のファン。
+			</p>
 		</div>
 	</main>
 	<script>
