--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 			</aside>
 	<main>
 		<h1>CONTACT FORM</h1>
+		<p>フォームはダミーです。まだ使えません。</p>
 		<form action="#">
 			<input type="text" name="" id="" placeholder="名前">
 			<input type="email" placeholder="email">
